--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-coffee": "^2.2.0",
     "gulp-nodemon": "^1.0.4",
     "gulp-notify": "^2.0.1",
-    "gulp-util": "^3.0.1"
+    "gulp-replace": "^0.5.0",
+    "gulp-util": "^3.0.1",
+    "yargs": "^1.3.3"
   }
 }
