--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-template-node",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A template for using gulp build backend node.js project",
   "main": "index.js",
   "scripts": {
@@ -22,12 +22,12 @@
   "homepage": "https://github.com/JamesYYang/gulp-template-node",
   "devDependencies": {
     "del": "^1.1.0",
-    "gulp": "^3.8.10",
-    "gulp-coffee": "^2.2.0",
-    "gulp-nodemon": "^1.0.4",
-    "gulp-notify": "^2.0.1",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-develop-server": "^0.4.3",
     "gulp-replace": "^0.5.0",
     "gulp-util": "^3.0.1",
+    "run-sequence": "^1.1.2",
     "yargs": "^1.3.3"
   }
 }
